--- a/RepositoryDriver_projects/EMFDriverTest/build.properties
+++ b/RepositoryDriver_projects/EMFDriverTest/build.properties
@@ -1,4 +1,4 @@
 source.EMFDriverTest.jar = src/
+output.EMFDriverTest.jar = bin/
 bin.includes = plugin.xml,\
-               *.jar,\
                EMFDriverTest.jar
