--- a/RepositoryDriver_projects/EMFDriverTest/plugin.xml
+++ b/RepositoryDriver_projects/EMFDriverTest/plugin.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?eclipse version="3.0"?>
 <plugin
    id="EMFDriverTest"
    name="EMFDriverTest Plug-in"
@@ -7,13 +8,14 @@
    class="EMFDriverTest.EMFDriverTestPlugin">
 
    <runtime>
-      <library name="EMFDriverTest.jar"/>
+      <library name="EMFDriverTest.jar">
+         <export name="*"/>
+      </library>
    </runtime>
+
    <requires>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="org.eclipse.ui"/>
+      <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.inria.EMFDriver"/>
    </requires>
-
 
 </plugin>
