EMFDriverTest updated version with same types names as MDR driver use.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@713 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
@@ -157,7 +157,7 @@
 	</target>
 
 	<target name="refresh" depends="init" if="eclipse.running" description="Refresh this folder.">
-		<eclipse.convertPath fileSystemPath="C:/eclipse3.0/eclipse/workspace/org.inria.EMFDriver" property="resourcePath"/>
+		<eclipse.convertPath fileSystemPath="C:/ECLIPSE3/eclipse/workspace/org.inria.EMFDriver" property="resourcePath"/>
 		<eclipse.refreshLocal resource="${resourcePath}" depth="infinite"/>
 	</target>
 
