--- a/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
@@ -21,7 +21,7 @@
       <import plugin="org.eclipse.core.runtime.compatibility"/>
       <import plugin="org.eclipse.emf.edit"/>
       <import plugin="org.eclipse.emf.ecore.xmi"/>
-      <import plugin="org.inria.BasicMTL.runtime"/>
+      <import plugin="org.inria.BasicMTL.runtime" export="true"/>
    </requires>
 
 
