--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.xml
@@ -16,7 +16,6 @@
    <requires>
     <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.ui.editors"/>
       <import plugin="org.eclipse.jface.text"/>
       <import plugin="org.eclipse.ui.views"/>
       <import plugin="org.eclipse.ui.ide"/>
@@ -28,6 +27,8 @@
       <import plugin="org.eclipse.text"/>
     <import plugin="org.apache.ant" optional="true"/>
     <import plugin="org.eclipse.team.core" optional="true"/>
+    <import plugin="org.eclipse.ui.editors"/>
+    <import plugin="org.eclipse.ui.workbench.texteditor"/>
    </requires>
 	 <extension
          point="org.eclipse.ui.perspectives">
