new version using the current version of emf
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@730 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/samples.library_projects/library.edit/plugin.properties
+++ b/samples.library_projects/library.edit/plugin.properties
@@ -44,3 +44,6 @@ _UI_Library_books_feature = Books
 _UI_Writer_name_feature = Name
 _UI_Writer_books_feature = Books
 _UI_Unknown_feature = Unspecified
+_UI_BookCategory_Mystery_literal = Mystery
+_UI_BookCategory_ScienceFiction_literal = ScienceFiction
+_UI_BookCategory_Biography_literal = Biography
