--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/build.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/build.properties
@@ -11,7 +11,9 @@ bin.includes = plugin.xml,\
                MTL/bin/BasicMTLruntime.jar,\
                MTL/bin/ThirdParty/ANTLR/antlrfull.jar,\
                MTL/bin/ThirdParty/log4j/,\
-               MTL/bin/log4j_configuration.xml
+               MTL/bin/log4j_configuration.xml,\
+               toc.xml,\
+               help/
 src.includes = src/,\
                bin/,\
                build.properties,\
