Tests for the event management in MTL
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@776 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/CompilerTests/src/EventListenerTests/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/EventListenerTests/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-09-28 12:55:02 edrezen Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-10-07 12:07:04 edrezen Exp $ -->
 <project name="EventListenerTests" default="compile" basedir=".">
 	<description>
         Build file for the event listeners
@@ -29,7 +29,7 @@
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="EventListenerTests"/>
 	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${builtsrc}/TLL/"/>
-	<property name="Sample built src" value="${builtsrc}/observersSamples/"/>
+	<property name="Sample built src" value="${builtsrc}/EventListenerTests/"/>
 
 	<!-- ************************************************ -->
 	<!-- ************************************************ -->
