--- a/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/build.properties
+++ b/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/build.properties
@@ -1,4 +1,5 @@
 source.EMFTransformationLauncher.jar = src/
+output.EMFTransformationLauncher.jar = bin/
 bin.includes = plugin.xml,\
-               *.jar,\
-               EMFTransformationLauncher.jar
+               EMFTransformationLauncher.jar,\
+               icons/
