MDR as Plugin project
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@791 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/CompilerTests/src/EventListenerTests/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/EventListenerTests/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2004-10-07 12:07:04 edrezen Exp $ -->
+<!-- $Id: build.xml,v 1.3 2004-10-13 15:14:41 jpthibau Exp $ -->
 <project name="EventListenerTests" default="compile" basedir=".">
 	<description>
         Build file for the event listeners
@@ -15,9 +15,11 @@
 	<property name="ANTLR2JavaCode" location="${MTLcompiler.jar.path}/BasicMTLc.jar"/>
 	<!-- The runtime environment -->
 	<property name="MTLcompiler.Runtime" location="${MTLcompiler.jar.path}/BasicMTLruntime.jar"/>
+	<property name="MDRDriver.path" location="../../../MDRDriver"/>
 	
 	<path id="current.class.path">
 	  	<pathelement path="${MTLcompiler.Runtime}"/>
+		<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
 	</path>
 	  	
 	<!-- ************************************************ -->
@@ -28,7 +30,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="EventListenerTests"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${builtsrc}/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${builtsrc}/TLL/;${MDRDriver.path}/src/ModelManager/TLL/;${builtsrc}/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/EventListenerTests/"/>
 
 	<!-- ************************************************ -->
@@ -87,6 +89,7 @@
 		<classpath>
 			<pathelement path="${builtbin}/"/>
 			<pathelement path="${MTLcompiler.Runtime}"/>
+			<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
    			<pathelement path="${MTLcompiler.jar.path}/Thirdparty/log4j/log4j.jar"/>
 		</classpath>
        	</java> 
