--- a/BasicMTL_projects/CompilerTests/src/Vehicules/TestVehicules/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/Vehicules/TestVehicules/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-12-16 11:12:24 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2004-10-13 16:19:36 jpthibau Exp $ -->
 <project name="TestVehicules" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -15,9 +15,11 @@
 	<property name="ANTLR2JavaCode" location="${MTLcompiler.jar.path}/BasicMTLc.jar"/>
 	<!-- The runtime environment -->
 	<property name="MTLcompiler.Runtime" location="${MTLcompiler.jar.path}/BasicMTLruntime.jar"/>
+	<property name="MDRDriver.path" location="../../../../MDRDriver"/>
 	
 	<path id="current.class.path">
 	  	<pathelement path="${MTLcompiler.Runtime}"/>
+		<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
 	</path>
 	  	
 	<!-- ************************************************ -->
@@ -28,7 +30,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="testVehicules"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/Runtime/src/TLL/;${builtsrc}/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/Runtime/src/TLL/;${MDRDriver.path}/src/ModelManager/TLL/;${builtsrc}/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/testVehicules/"/>
 
 	<!-- ************************************************ -->
@@ -87,6 +89,7 @@
 		<classpath>
 			<pathelement path="${builtbin}/"/>
 			<pathelement path="${MTLcompiler.Runtime}"/>
+			<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
    			<pathelement path="${MTLcompiler.jar.path}/Thirdparty/log4j/log4j.jar"/>
 		</classpath>
        	</java> 
