--- a/RepositoryDriver_projects/ModFactDriver/ModelManager/ModFact/build.xml
+++ b/RepositoryDriver_projects/ModFactDriver/ModelManager/ModFact/build.xml
@@ -1,24 +1,25 @@
-<!-- $Id: build.xml,v 1.1 2004-10-13 14:31:57 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.1 2004-10-18 14:56:34 jpthibau Exp $ -->
 <project name="ModFactDriver modelmanager" default="compile_mtl" basedir=".">
 	<description>
         Compile the BasicMtl wraper to generate code to access ModFactDriver.
 	</description>
 	<!-- set global properties for this build -->
-	<property name="src" location=".."/>
+	<property name="base" location=".."/>
+	<property name="src" location="../../src"/>
 	
 	<!-- This compilation depends on the org.inria.BasicMtl.runtime project -->
 	<property name="BasicMtlRuntime"  location="..\org.inria.BasicMTL.runtime"/>
 
 	<!-- Compiler and standard TLLs are supposed to be already built -->
-	<property name="ANTLR2JavaCode" location="..\..\..\..\BasicMtl2Java\LibAssociation\dist\bin\BasicMTLc.jar"/>
-	<property name="BasicMtlTLLs" location="..\..\..\..\BasicMtl2Java\LibAssociation\dist\Runtime\src\TLL"/>
+	<property name="ANTLR2JavaCode" location="..\..\..\BasicMtl2Java\LibAssociation\dist\bin\BasicMTLc.jar"/>
+	<property name="BasicMtlTLLs" location="..\..\..\BasicMtl2Java\LibAssociation\dist\Runtime\src\TLL"/>
 
 	<target name="compile_mtl"
         description="compile the mtl driver manager" >
  		<java jar="${ANTLR2JavaCode}" 
 						fork="true"
 	           			failonerror="true">
-		         <arg value="${src}/ModFact/"/>
+		         <arg value="${base}/ModFact/"/>
 	         	<arg value="-TLLLoadingPaths"/>
 		         <arg value="${BasicMtlTLLs}/"/>  
 	         	<arg value="-TLLPath"/> 
@@ -26,7 +27,10 @@
 		         <arg value="-PackageName"/> 
 		         <arg value="ModFactDriver"/> 
 		         <arg value="-BinPath"/> 
-		         <arg value="${src}/build/"/> 
+		         <arg value="${src}/ModFactDriver/"/> 
 	       	</java>
+		<copy todir="${src}/ModFactDriver">
+			<fileset file="${base}\ModFactDriver\ModFactModelManager.java"/>
+		</copy>
 		</target>
 </project>
