--- a/RepositoryDriver_projects/MDRDriver/.classpath
+++ b/RepositoryDriver_projects/MDRDriver/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="**/CVS/*" kind="src" path="src"/>
+	<classpathentry kind="src" path="build/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/RepositoryAPI"/>
 	<classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
