moved mtl and java files in the proper place
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@824 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/MDRDriver/srcMTL/MDRDriver/build.xml
+++ b/RepositoryDriver_projects/MDRDriver/srcMTL/MDRDriver/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2004-10-19 08:03:57 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.1 2004-10-19 08:54:38 dvojtise Exp $ -->
 <project name="MDRDriver modelmanager" default="compile_mtl" basedir=".">
 	<description>
         Compile the BasicMtl wraper to generate code to access MDRDriver.
