--- a/samples.SimpleUML_projects/SimpleUML/src/SimpleUMLTransformations/build.xml
+++ b/samples.SimpleUML_projects/SimpleUML/src/SimpleUMLTransformations/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2004-10-14 12:03:32 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.3 2004-10-19 10:05:59 jpthibau Exp $ -->
 <project name="SimpleUMLTransformations" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -30,7 +30,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="SimpleUMLTransformations"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${MDRDriver.path}/src/ModelManager/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${MDRDriver.path}/build/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/SimpleUMLTransformations/"/>
 
 	<!-- ************************************************ -->
