BasicMTL.compiler plugin
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@857 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
@@ -1,4 +1,10 @@
-source.compiler.jar = src/java/
+source.compiler.jar = src/,\
+                      build/src/
 output.compiler.jar = bin/
 bin.includes = plugin.xml,\
-               compiler.jar
+               compiler.jar,\
+               src/,\
+               bin/,\
+               .project,\
+               build/,\
+               ThirdParty/
