--- a/BasicMTL_projects/org.inria.BasicMTL.compiler/plugin.xml
+++ b/BasicMTL_projects/org.inria.BasicMTL.compiler/plugin.xml
@@ -3,18 +3,28 @@
 <plugin
    id="org.inria.BasicMTL.compiler"
    name="Compiler Plug-in"
-   version="0.0.1"
-   provider-name="INRIA"
+   version="1.0.0"
+   provider-name=""
    class="org.inria.BasicMTL.compiler.CompilerPlugin">
 
    <runtime>
       <library name="compiler.jar">
          <export name="*"/>
       </library>
+      <library name="ThirdParty/ANTLR/antlrfull.jar">
+         <export name="*"/>
+      </library>
+      <library name="ThirdParty/JUnit/junit.jar">
+         <export name="*"/>
+      </library>
+      <library name="ThirdParty/log4j/log4j.jar">
+         <export name="*"/>
+      </library>
    </runtime>
 
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.inria.BasicMTL.runtime"/>
    </requires>
 
 </plugin>
