--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
@@ -1,5 +1,7 @@
-source.EMFDriver.jar = src/,\
-                       build/src/
-output.EMFDriver.jar = bin/
+source.lib/EMFDriver.jar = src/java/,\
+                           build/src/java/
+rc/java/
+rc/java/
+output.dist\EMFDriver.jar = bin/
 bin.includes = plugin.xml,\
-               EMFDriver.jar
+               lib/EMFDriver.jar
