--- a/RepositoryDriver_projects/ModFactDriver/.classpath
+++ b/RepositoryDriver_projects/ModFactDriver/.classpath
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="build/src"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/antlr.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ANTLR4SimpleTRL.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/JMI1_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/log4j-1.2.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ModFactJmi.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ow_monolog.jar"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ow_utils_commandline.jar"/>
+	<classpathentry kind="src" path="build/src/java/"/>
+	<classpathentry kind="src" path="src/java/"/>
+	<classpathentry exported="true" kind="lib" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/Utils"/>
-	<classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
-	<classpathentry kind="src" path="/RepositoryAPI"/>
-	<classpathentry kind="lib" path="ThirdParty/ModFact/v1_0_0/JMI1_0.jar"/>
-	<classpathentry kind="src" path="/MTDataTypes"/>
-	<classpathentry kind="src" path="/MDRDriver"/>
-	<classpathentry kind="lib" path="/MDRDriver/bin"/>
-	<classpathentry kind="lib" path="ThirdParty/ModFact/v1_0_0/ModFactJmi.jar"/>
-	<classpathentry kind="src" path="/org.inria.BasicMTL.runtime"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
